week 4 ready(ish)

--- a/Week_3/Lecture_3.ipynb
+++ b/Week_3/Lecture_3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:32cc9ed11d4f262907dbbb634f7fe161428f3c716fd07fe9c6c1fa9e9a0932a5"
+  "signature": "sha256:0abbb46d3a86ce0c1c642996e9daae8fbea7ae7ccbba4662403c6ad5bc578d3f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -416,7 +416,165 @@
        "slide_type": "-"
       }
      },
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>sh110g</th>\n",
+        "      <th>hv247</th>\n",
+        "      <th>hv246</th>\n",
+        "      <th>hv227</th>\n",
+        "      <th>sh118f</th>\n",
+        "      <th>hv243a</th>\n",
+        "      <th>hv243c</th>\n",
+        "      <th>hv243b</th>\n",
+        "      <th>hv225</th>\n",
+        "      <th>hv209</th>\n",
+        "      <th>hv208</th>\n",
+        "      <th>hv243d</th>\n",
+        "      <th>hv207</th>\n",
+        "      <th>hv206</th>\n",
+        "      <th>hv212</th>\n",
+        "      <th>hv221</th>\n",
+        "      <th>hv210</th>\n",
+        "      <th>hv211</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "   sh110g  hv247  hv246  hv227  sh118f  hv243a  hv243c  hv243b  hv225  hv209  \\\n",
+        "0       0      1      0      1       0       1       0       1      0      0   \n",
+        "1       0      1      0      0       0       1       0       0      1      0   \n",
+        "2       0      1      0      0       0       1       0       1      1      0   \n",
+        "3       0      0      0      1       0       0       0       0      1      0   \n",
+        "4       0      0      1      1       0       0       0       0      1      0   \n",
+        "\n",
+        "   hv208  hv243d  hv207  hv206  hv212  hv221  hv210  hv211  \n",
+        "0      1       0      1      1      0      0      0      0  \n",
+        "1      0       0      1      1      0      0      0      0  \n",
+        "2      0       0      1      0      0      0      0      1  \n",
+        "3      0       0      0      0      0      0      0      0  \n",
+        "4      0       0      0      0      0      0      0      0  "
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -437,7 +595,121 @@
        "slide_type": "-"
       }
      },
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>full name</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>hv206</th>\n",
+        "      <td>                        has electricity</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv207</th>\n",
+        "      <td>                              has radio</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv208</th>\n",
+        "      <td>                         has television</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv209</th>\n",
+        "      <td>                       has refrigerator</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv210</th>\n",
+        "      <td>                            has bicycle</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv211</th>\n",
+        "      <td>                 has motorcycle/scooter</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv212</th>\n",
+        "      <td>                          has car/truck</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv221</th>\n",
+        "      <td>               has telephone (landline)</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv225</th>\n",
+        "      <td>     share toilet with other households</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv227</th>\n",
+        "      <td>      has mosquito bed net for sleeping</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv243a</th>\n",
+        "      <td>                   has mobile telephone</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv243b</th>\n",
+        "      <td>                              has watch</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv243c</th>\n",
+        "      <td>                  has animal-drawn cart</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv243d</th>\n",
+        "      <td>                  has boat with a motor</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv246</th>\n",
+        "      <td> owns livestock, herds, or farm animals</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>hv247</th>\n",
+        "      <td>                       has bank account</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>sh110g</th>\n",
+        "      <td>                               computer</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>sh118f</th>\n",
+        "      <td>                     boat without motor</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "                                     full name\n",
+        "hv206                          has electricity\n",
+        "hv207                                has radio\n",
+        "hv208                           has television\n",
+        "hv209                         has refrigerator\n",
+        "hv210                              has bicycle\n",
+        "hv211                   has motorcycle/scooter\n",
+        "hv212                            has car/truck\n",
+        "hv221                 has telephone (landline)\n",
+        "hv225       share toilet with other households\n",
+        "hv227        has mosquito bed net for sleeping\n",
+        "hv243a                    has mobile telephone\n",
+        "hv243b                               has watch\n",
+        "hv243c                   has animal-drawn cart\n",
+        "hv243d                   has boat with a motor\n",
+        "hv246   owns livestock, herds, or farm animals\n",
+        "hv247                         has bank account\n",
+        "sh110g                                computer\n",
+        "sh118f                      boat without motor"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
