--- a/Week_4/Lecture_4.ipynb
+++ b/Week_4/Lecture_4.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:e65caabf10bf10080f9ce6614b44a2868a1b7ebd2a31edbb0bd3a162cffaf260"
+  "signature": "sha256:de6a88c6d67f0ba9adbf9b1ca280021bccd9754b399d8654272adca7bc30771e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -80,6 +79,38 @@
       "\n",
       "* Class 1: review homework, discuss cross-validation, begin exercise\n",
       "* Class 2: continue exercise, discuss metrics of success\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "<img  src=\"R9R9NOUE2097P3R74WTBFKTR4QVGHH59.png\"/>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "<img  src=\"MX8CQVJXO6FD353HS3AWFJGVIOFOGO5M.png\"/>"
      ]
     },
     {
@@ -211,10 +242,8 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 34,
-       "slide_helper": "subslide_end"
+       "frag_number": 13
       },
-      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "fragment"
       }
@@ -231,6 +260,12 @@
      ],
      "language": "python",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 13,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "skip"
       }
@@ -246,6 +281,13 @@
      ],
      "language": "python",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 13,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -277,6 +319,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 13,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -296,7 +340,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
+       "frag_number": 13,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -318,7 +362,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
+       "frag_number": 13,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -336,9 +380,11 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
+       "frag_number": 13,
+       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -352,9 +398,11 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
+       "frag_number": 13,
+       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -368,9 +416,11 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
+       "frag_number": 13,
+       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -384,7 +434,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
+       "frag_number": 13,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -400,6 +450,12 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "fragment"
       }
@@ -413,7 +469,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
+       "frag_number": 23,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -435,11 +491,9 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14,
-       "slide_helper": "subslide_end",
+       "frag_number": 23,
        "slide_type": "subslide"
       },
-      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -450,21 +504,15 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<img  src=\"CYYQFSQO24TJUFXYJ43A4L66OMUA1M48.png\"/>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<img  src=\"NT3LF17O0UFMB8HLRFW82NVX69NIH33F.png\"/>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "<img  src=\"UOLIF68F0GGJL04GMXTC3TDSO7V14G5O.png\"/>"
      ]
@@ -481,7 +529,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 34,
+       "frag_number": 23,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
